Fixed grid gap bug. Rendered profile image in userInfo page.

--- a/source/assets/styles/userInfo.css
+++ b/source/assets/styles/userInfo.css
@@ -1,5 +1,5 @@
 .myUploadRecipeCardGridContainer {
-    height: 480px;
+    max-height: 480px;
     overflow: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -7,10 +7,11 @@
     margin: 20px;
     align-items: center;
     text-align: center;
+    gap: 8%;
 }
 
 .mySavedRecipeCardGridContainer {
-    height: 480px;
+    max-height: 480px;
     overflow: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -18,6 +19,7 @@
     margin: 20px;
     align-items: center;
     text-align: center;
+    gap: 8%;
 }
 
 
@@ -29,6 +31,11 @@
 
 #userName {
     margin: 0;
+}
+
+#notProfile {
+    border-radius: 50%;
+    border: 3px white solid;
 }
 
 #userCard {
